--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "mongodb": "^2.2.29",
-    "mongoose": "~4.10.7",
+    "mongojs": "^2.4.0",
+    "mongojs-models": "^0.1.4",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
     "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
